# Capstone-Project

./: .env.example  .gitignore  GUIDE.md  MODULE.bazel  README.md  WORKSPACE.bazel  bazel-Capstone-Project  bazel-bin  bazel-out  bazel-testlogs  docker-compose-other.yml
.githooks/: pre-commit
.github/workflows/: ai.yml  be.yml  deploy.yml  fe.yml  github-ci.yml  mobile.yml  web.yml
ai-service/: requirements.txt
ai-service/app/: api.py
be/: .env.example  .gitignore  docker-compose.yml  nx.json  package-lock.json  package.json  tsconfig.base.json  tsconfig.json
be/ai_module/: Dockerfile  build.sh  check.sh  main.py  ocr_boundary.py  pyproject.toml  requirements.txt  script
be/apps/: .env.example  Dockerfile  README.md  build.gradle  docker-compose-db.yml  docker-compose-default.yml  docker-compose-other.yml  docker-compose-services.yml  docker-compose.yml  settings.gradle
be/services/: project.json  settings.gradle
be/services/sample/: BUILD.bazel
be/services/sample/src/test/java/com/sample/: SampleTest.java
document/Kế hoạch/: Kế hoạch 1 - Đồ án SP26.docx
document/Tài liệu tham khảo/: TÀI LIỆU CHI TIẾT TÍCH HỢP VÀ LIÊN THÔNG DỮ LIỆU TRONG HỆ THỐNG BỆNH ÁN ĐIỆN TỬ (EMR).docx  Tài liệu Xây dựng Bệnh án Điện Tử EMR.docx
document/report/: CMSN_RP2_ProjectManagementPlan_v1.0.docx  CMSN_SEP490_G39_RP1_Project_Introduction_v1.0.docx
document/software documents/: sdd.md  srs.md
document/template/: Project Backlog.xlsx
fe/: .gitignore  next.config.js  package-lock.json  package.json
skills/: OpenAPIDoc_UnitTest.md  class_diagram_guideline.md
(+2337 files in other folders)
