module(
    name = "capstone_project",
    version = "1.0",
)

bazel_dep(name = "rules_jvm_external", version = "5.3")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    artifacts = ["junit:junit:4.13.2"],
    repositories = ["https://repo1.maven.org/maven2"],
)
use_repo(maven, "maven")
